2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/26_AsmAvecInt.deca
// Description:
//    Programme mal utilisantion de asm , utilisation de int dans asm
// Resultats:
//      Programme incorrecte syntaxiquement : 9:23: mismatched input '3' expecting {STRING, MULTI_LINE_STRING}
// Historique:
//    cree le 18/01/2023
class H {
    int f;
    void F(int x) asm (3) ;
}